<resources>
    <string name="app_name">android-CircleProgressView</string>

    <string name="demo">Demo</string>
    <string name="progress">Progress</string>
    <string name="foreground_stroke">Foreground stroke</string>
    <string name="background_stroke">Background stroke</string>
    <string name="animate_demo">Animate demo</string>
    <string name="change_color_demo">Change color demo</string>
</resources>
