<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jp.co.recruit_mp.android.circleprogressviewdemo.DemoActivity">

    <jp.co.recruit_mp.android.circleprogressview.CircleProgressView
        android:id="@+id/circleprogressview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        app:CircleProgressView_progress="0.45"
        app:CircleProgressView_foregroundStroke="14dp"
        app:CircleProgressView_backgroundStroke="14dp"
        app:CircleProgressView_foregroundColor="@color/demo_orange"
        app:CircleProgressView_backgroundColor="@color/demo_brown"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo"
                android:textSize="18sp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/progress"/>

                    <SeekBar
                        android:id="@+id/seekBar_progress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:indeterminate="false"
                        android:max="100"/>

                    <TextView
                        android:id="@+id/textview_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:gravity="right"
                        android:minWidth="32sp"
                        tools:text="0.0"/>

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/foreground_stroke"/>

                    <SeekBar
                        android:id="@+id/seekBar_foreground_stroke"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:indeterminate="false"
                        android:max="3000"/>

                    <TextView
                        android:id="@+id/textview_foreground_stroke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:gravity="right"
                        android:minWidth="32sp"
                        tools:text="0.0"/>

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/background_stroke"/>

                    <SeekBar
                        android:id="@+id/seekBar_background_stroke"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:indeterminate="false"
                        android:max="3000"/>

                    <TextView
                        android:id="@+id/textview_background_stroke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:gravity="right"
                        android:minWidth="32sp"
                        tools:text="0.0"/>

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/button_animation1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/animate_demo"/>

            <Button
                android:id="@+id/button_color1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_color_demo"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
